--- a/start-site/src/main/resources/config/application.yml
+++ b/start-site/src/main/resources/config/application.yml
@@ -25,6 +25,7 @@ archetypes:
         - web
         - liquibase
         - amqp
+        - custom-dependency
       type: gradle-project
       language: java
       platformVersion: 2.3.3.RELEASE
